packages/webassemblyjs/test/fixtures/type-errors/operand-if-missing-in-loop/module.wast
(module (func $type-if-operand-missing-in-block
	(i32.const 0)
	(loop (if (then)))
))
